tests/attributes/keeping.stderr
error: field is never read: `taste`
 --> $DIR/keeping.rs:6:5
  |
6 |     taste: String,
  |     ^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> $DIR/keeping.rs:5:14
  |
5 |     #[forbid(dead_code)]
  |              ^^^^^^^^^

error: field is never read: `taste`
 --> $DIR/keeping.rs:6:5
  |
6 |     taste: String,
  |     ^^^^^^^^^^^^^

error: struct is never constructed: `HumanBean1`
  --> $DIR/keeping.rs:11:8
   |
11 | struct HumanBean1 {
   |        ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/keeping.rs:10:10
   |
10 | #[forbid(dead_code)]
   |          ^^^^^^^^^
